--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,8 @@ h1 {
 
 .app:before {
   content: '';
-  background: url('./assets/sunset.jpg') no-repeat center center/cover;
+  /* background: url('./assets/sunset.jpg') no-repeat center center/cover; */
+  background: url('https://source.unsplash.com/1600x900/?landscape') no-repeat center center/cover;
   position: absolute;
   width: 100%;
   height: 100%;
